Fixed long song titles overlapping with playback controls.

--- a/less/room.less
+++ b/less/room.less
@@ -691,6 +691,12 @@
       right: 0;
       padding-right: 5px;
       padding-top: 5px;
+      padding-left: 20px;
+      background: @nav-background;
+      @shadow: -14px 0px 27px 0px @nav-background;
+      -webkit-box-shadow: @shadow;
+      -moz-box-shadow: @shadow;
+      box-shadow: @shadow;
 
       &:empty {
         display: none;
